# Cline-Python-SDK

./: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cline_sdk/: __init__.py
cline_sdk/agents/: __init__.py  agent.py
cline_sdk/core/: __init__.py  cline_core.py
cline_sdk/llms/: __init__.py  provider.py
cline_sdk/shared/: __init__.py  extensions.py  hooks.py  logger.py  types.py  utils.py
examples/: basic_agent.py  custom_tools.py  hooks.py  plugins.py
tests/: __init__.py  test_agent.py  test_tools.py
